k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jug-api
  namespace: jug
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - jug-api-production.dev.nk360.de
    secretName: api-tls-cert
  rules:
  - host: jug-api-production.dev.nk360.de
    http:
      paths:
      - backend:
          serviceName: jug-api-production
          servicePort: 8080
